[package]
name = "entropy-network-status-page"
version = "0.0.1"
edition = "2021"
authors   =['Entropy Cryptography <engineering@entropy.xyz>']
homepage  ='https://entropy.xyz/'
license   ='AGPL-3.0-or-later'

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.5", features = ["nightly"] }
leptos_meta = { version = "0.5", features = ["nightly"] }
leptos_router = { version = "0.5", features = ["nightly"] }
log = "0.4"
simple_logger = "4"
tokio = { version = "1.25.0", optional = true }
wasm-bindgen = "=0.2.89"
thiserror = "1.0.38"
http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
# entropy-testing-utils = { git = "ssh://git@github.com/entropyxyz/entropy-core.git", tag="release/v0.0.10", optional = true }
entropy-shared = { git = "ssh://git@github.com/entropyxyz/entropy-core.git", tag="release/v0.0.10", default-features = false, features=["wasm"] }
subxt = { version = "0.32.1", default-features = false, features = ["web", "jsonrpsee"]}
hex = "0.4.3"
web-sys = { version = "0.3.66", features = ["Navigator", "Clipboard"]}
wasm-bindgen-futures = "0.4.39"
pretty-bytes-rust = "0.1.0"
anyhow = "1.0.75"
parity-scale-codec="3.0.0"

# [features]
# hydrate = [
#   "leptos/hydrate",
#   "leptos_meta/hydrate",
#   "leptos_router/hydrate",
# ]


# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
